--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "preact": "^10.18.0",
+    "vite": "^4.4.9"
   }
 }
