--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "myanma-timber",
-  "version": "0.2.0",
+  "name": "@phothinmg/myanma-timber",
+  "version": "1.0.0",
   "description": "Myanma Timber Log and Lumber Volume Calculation",
   "main": "./src/index.js",
   "keywords": [
     "Myanmar",
     "Timber"
   ],
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/phothinmg/myanma-timber.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "author": "Pho Thin Maung",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
+    "preact-render-to-string": "^6.2.1",
+    "typescript": "^5.2.2",
     "preact": "^10.18.0",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "@preact/preset-vite": "^2.5.0"
   }
 }
